# ai-paper-partner

./: .env.example  .gitignore  DEVELOPMENT_TICKETS.md  README.md  db-docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 66bcba7073ce_init_create_all_base_tables.py  c86b601fc265_create_projects_table.py
backend/app/: database.py  main.py
backend/app/models/: chunk.py  conversation.py  paper.py  project.py
backend/app/schemas/: chunk.py  conversation.py  paper.py  project.py
design/wireframe/: wireframe.html
frontend/: CLAUDE.md  REACT_APP_GUIDE.md
frontend/.claude/: settings.local.json
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Textarea.tsx
frontend/src/contexts/: ChatContext.tsx  ProjectContext.tsx  index.ts
frontend/src/pages/: ChatPage.tsx  PapersPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  UploadPage.tsx  index.ts
frontend/src/services/: api.ts  index.ts
frontend/src/types/: index.ts
