[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.123.8",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pymilvus>=2.6.3",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
